--- a/Project/WriteResultToTextFile.xaml
+++ b/Project/WriteResultToTextFile.xaml
@@ -78,7 +78,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[in_ResultDT]" DisplayName="For loop through each of the roq" sap:VirtualizedContainerService.HintSize="466.4,468.8" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[in_ResultDT]" DisplayName="For loop through each of the row in the datatable" sap:VirtualizedContainerService.HintSize="466.4,468.8" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
